css/wilderness.css
body {
    background-color: black;
}

#land {
    background-image: url("../img/wilderness/land.png");
    position: relative;
    height: 90vh; /* height is 90% of the screen */
    overflow: hidden; /* for bushes that spawn out of screen */
}

#exitBtn { /* same as quit btn from game menu */
    margin-top: 10px;
    color: black;
    width: 200px;
    height: 70px;
    font-size: 20px;
    font-family: "Audiowide";

    background: linear-gradient(0deg, rgba(167,25,62,1) 0%, rgba(227,26,45,1) 100%);
    border: #950740 5px solid;
    box-shadow: 0 0 15px red;
    border-radius: 10px;
}

#exitBtn:hover {
    cursor: cell;
    color: white;
    transition: 0.5s; 
    position: relative;
    top: 5px;
}

@keyframes run {
    /* - the player image file is comprised of 3 different images of the player in a walking motion, we can move 
    the position of the image to make it look like the player is walking 
    - we will move the position of the image in 1/3 increments */

    0%, 32% { /* means from 0% til 32% of the animation */
        background-position: 0 0;
    }
    33%, 65% {
        background-position: -80px 0;
    }
    66%, 100% {
        background-position: -160px 0;
    }
}

#player {
    z-index: 999; /* assures player will always be in front of everything (ex. bushes) */
    background-image: url("../img/wilderness/player_front.png");
    position: absolute;
    top: 45%;
    left: 47%;
    width: 80px;
    height: 100px;
    background-size: 240px 100px; /* Bigger player */
    background-position: -80px 0;

    /* commenting this out because player won't be running by default */
    /*
    animation: run;
    animation-duration: 0.3s;
    animation-iteration-count: infinite; /* animation runs forever 
    animation-timing-function: linear; /* speed of the animation, linear means constant animation speed throughout
    border: 2px red solid;*/
}

.running {
    animation: run;
    animation-duration: 0.3s;
    animation-iteration-count: infinite; /* animation runs forever*/ 
    animation-timing-function: linear; /* speed of the animation, linear means constant animation speed throughout*/
}

#bush {
    position: absolute;
    
    /* z-index: 1; to make sure bushes arent covered by the background land (default z index is 0) */
    background-image: url("../img/wilderness/bush.png");
    
    /* adjusted background-size, height, width, and background-position to fit bush right within div borders */
    background-size: 160px 125px;
    height: 55px;
    width: 75px;
    background-position: -5px -15px;
}

